--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,18 @@
   "background_color": "#ffffff",
   "theme_color": "#317EFB",
   "icons": [
-    {
-      "src": "https://example.com/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "https://example.com/icon-512.png",
+    {"icons": [
+  {
+    "src": "icon.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  },
+  {
+    "src": "icon.png",
+    "sizes": "512x512",
+    "type": "image/png"
+  }
+],
       "sizes": "512x512",
       "type": "image/png"
     }
